# Cortex

./: .env.example  .gitignore  .mcpregistry_github_token  .mcpregistry_registry_token  CHANGELOG.md  CODEMAP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REIMPORT_INSTRUCTIONS.md  RESUME_INSTRUCTIONS.md  SECURITY.md  docker-compose.yml  llms.txt  pyproject.toml  server.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
benchmarks/: __init__.py  conftest.py
benchmarks/b1_hybrid_retrieval/: queries.py  test_bench.py
benchmarks/b2_reasoning/: test_bench.py  topologies.py
benchmarks/b3_contradiction/: test_bench.py
benchmarks/b4_graph_intelligence/: test_bench.py
benchmarks/b5_pattern_detection/: test_bench.py
benchmarks/corpus/: __init__.py  embeddings.py  generator.py
benchmarks/metrics/: __init__.py  classification.py  reasoning.py  retrieval.py
deploy/: ai.abbacus.cortex.dashboard.plist  ai.abbacus.cortex.mcp.plist  cortex-dashboard.service  cortex-mcp.service
homebrew/: update-formula.sh
homebrew/Formula/: abbacus-cortex.rb
resources/ollama/: mistral-7b-kb-classifier.Modelfile  qwen3-kb-classifier.Modelfile
src/cortex/: __init__.py  __main__.py
src/cortex/cli/: _helpers.py  backup.py  env_writer.py  install.py  main.py  setup_wizard.py
src/cortex/core/: __init__.py  config.py  constants.py  docs.py  errors.py  logging.py
src/cortex/dashboard/: mcp_client.py  server.py
src/cortex/dashboard/static/css/: style.css
src/cortex/dashboard/static/js/: graph.js
src/cortex/dashboard/templates/: base.html  create.html  detail.html  documents.html  entities.html  error.html  explore.html  graph.html  home.html  insights.html  login.html  project.html  settings.html  synthesis.html  trail.html
src/cortex/db/: __init__.py  content_store.py  graph_store.py  store.py
src/cortex/ontology/: __init__.py  cortex.ttl  namespaces.py  resolver.py
src/cortex/pipeline/: advanced_reason.py  enrich.py  importer.py  link.py  normalize.py  orchestrator.py  reason.py  templates.py  temporal.py
src/cortex/retrieval/: engine.py  graph.py  learner.py  presenters.py
src/cortex/services/: embeddings.py  llm.py
src/cortex/transport/api/: server.py
src/cortex/transport/mcp/: __main__.py  client.py  server.py
tests/: conftest.py  test_distribution.py
tests/cli/: test_backup.py  test_cli.py  test_cli_phase7.py  test_direct_flag.py  test_doctor.py  test_doctor_check.py  test_install.py  test_lock_errors.py  test_mcp_routed_commands.py  test_setup_wizard.py
tests/core/: test_config.py  test_errors.py  test_logging.py
tests/dashboard/: test_dashboard.py  test_mcp_client.py  test_server_mcp_mode.py  test_templates_direct.py  test_vault_export.py
tests/db/: test_content_store.py  test_graph_store.py  test_graph_store_locking.py  test_store_temporal.py  test_sync.py
tests/deploy/: test_plist_templates.py
tests/integration/: test_phase2_concurrency.py  test_phase3_cli_concurrency.py  test_phase4_rest_api_concurrency.py
tests/ontology/: test_ontology.py  test_resolver.py
tests/pipeline/: test_advanced_reason.py  test_enrich.py  test_import.py  test_link.py  test_normalize.py  test_orchestrator.py  test_reason.py  test_templates.py  test_temporal.py
tests/retrieval/: test_engine.py  test_graph.py  test_learner.py  test_presenters.py
tests/services/: test_embeddings.py  test_llm.py
tests/transport/: test_api.py  test_mcp.py  test_mcp_client.py
