[project]
name = "abbacus-cortex"
version = "0.3.0"
description = "Cognitive knowledge system with formal ontology, reasoning, and intelligence serving"
readme = "README.md"
authors = [
    { name = "grayisnotacolor", email = "74255714+grayisnotacolor@users.noreply.github.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["knowledge-graph", "knowledge-management", "mcp", "reasoning", "ontology", "rdf", "ai", "semantic-search", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed",
]

dependencies = [
    # Graph / Ontology
    "pyoxigraph>=0.4",
    # SQLite (async)
    "aiosqlite>=0.20",
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # CLI
    "typer>=0.15",
    # Templates
    "jinja2>=3.1",
    # Config
    "python-dotenv>=1.1",
    # Auth
    "bcrypt>=4.2",
    # MCP
    "mcp>=1.6",
    # HTTP client
    "httpx>=0.28",
    # LLM (provider-agnostic: Anthropic, OpenAI, Ollama, etc.)
    "litellm>=1.60",
]

[project.urls]
Homepage = "https://github.com/abbacusgroup/Cortex"
Repository = "https://github.com/abbacusgroup/Cortex"
Documentation = "https://github.com/abbacusgroup/Cortex#readme"
Changelog = "https://github.com/abbacusgroup/Cortex/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/abbacusgroup/Cortex/issues"

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.4"]

[project.scripts]
cortex = "cortex.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    # Bundle 9 / F.1 + F.2: xdist for parallel runs (the CI workflow uses
    # ``pytest -n auto``); forked for the test-isolation suite that needs
    # a fresh process per test.
    "pytest-xdist>=3.8",
    "pytest-forked>=1.6",
    "httpx>=0.28",
    "ruff>=0.11",
]

[build-system]
requires = ["uv_build>=0.10.12,<1.0.0"]
build-backend = "uv_build"

[tool.uv]
build-backend.module-name = "cortex"

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "slow: end-to-end tests that spawn subprocesses (skipped in fast loops)",
    "bench: benchmark suite (run with -m bench)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "N", "RUF", "SIM", "W", "UP"]
